--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
     <nav class="navbar navbar-expand-lg position-sticky top-0">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fa-sharp fa-solid fa-headset"></i>Programers</a>
+            <a class="navbar-brand" href="#"><i class="fa-sharp fa-solid fa-headset"></i>Pro<span
+                    class="blue-text">gamers</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -37,6 +38,13 @@
             </div>
         </div>
     </nav>
+    <header class="hero-img">
+        <div class="hero-text">
+            <h1>Hello in Pro<span class="blue-text">gamers</span></h1>
+            <p>Place, where games are created with passion</p>
+        </div>
+        <div class="hero-shadow"></div>
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
