Fixed nav and header layering

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg position-sticky top-0">
+    <nav class="navbar navbar-expand-lg position-fixed top-0 w-100">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="fa-sharp fa-solid fa-headset"></i>Pro<span
                     class="blue-text">gamers</span></a>
