Menu scrolling anchor, optimized background image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </nav>
-    <header class="hero-img">
+    <header class="hero-img" id="home">
         <div class="hero-text">
             <h1>Hello in Pro<span class="blue-text">gamers</span></h1>
             <p>Place, where games are created with passion</p>
