--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
         <div class="hero-text">
             <h1>Hello in Pro<span class="blue-text">gamers</span></h1>
             <p>Place, where games are created with passion</p>
+            <a href="#aboutus" class="btn btn-outline-light mt-2 text-uppercase">More about us</a>
         </div>
         <div class="hero-shadow"></div>
+        <a href="#aboutus">
+            <i class="fa-solid fa-chevron-down"></i>
+        </a>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
