Responsive resizing text in header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <header class="hero-img" id="home">
-        <div class="hero-text">
+        <div class="hero-text text-center p-2">
             <h1>Hello in Pro<span class="blue-text">gamers</span></h1>
             <p>Place, where games are created with passion</p>
             <a href="#aboutus" class="btn btn-outline-light mt-2 text-uppercase">More about us</a>
