--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg position-fixed top-0 w-100">
+    <nav class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="fa-sharp fa-solid fa-headset"></i>Pro<span
                     class="blue-text">gamers</span></a>
@@ -52,6 +52,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
