New section about us, tiny translation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <header class="hero-img" id="home">
         <div class="hero-text text-center p-2">
-            <h1>Hello in Pro<span class="blue-text">gamers</span></h1>
+            <h1>Welcome in Pro<span class="blue-text">gamers</span></h1>
             <p>Place, where games are created with passion</p>
             <a href="#aboutus" class="btn btn-outline-light mt-2 text-uppercase">More about us</a>
         </div>
@@ -49,6 +49,46 @@
             <i class="fa-solid fa-chevron-down"></i>
         </a>
     </header>
+    <main>
+        <section id="aboutus" class="aboutus bg-light py-5">
+            <div class="container">
+                <h2 class="section-title">About us</h2>
+                <div class="underline"></div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <p class="aboutus-card-title mb-1">mobile gaming</p>
+                        <p class="aboutus-card-text">We are creating mobile games!</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fas fa-desktop"></i></p>
+                        <p class="aboutus-card-title mb-1">desktop gaming</p>
+                        <p class="aboutus-card-text">We are creating PC games!</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fas fa-file-code"></i></p>
+                        <p class="aboutus-card-title mb-1">High standards</p>
+                        <p class="aboutus-card-text">Our code is written with highest standards!</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fas fa-paw"></i></p>
+                        <p class="aboutus-card-title mb-1">We love animals!</p>
+                        <p class="aboutus-card-text">Our games are created environmentally friendly🙂</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fas fa-hamburger"></i></p>
+                        <p class="aboutus-card-title mb-1">We are loving good food</p>
+                        <p class="aboutus-card-text">Food is important for us before duty.</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fas fa-glass-cheers"></i></p>
+                        <p class="aboutus-card-title mb-1">Great communication</p>
+                        <p class="aboutus-card-text">Customers can feel our engagement</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
