Coloring about us boxes on hover, transition optimization

--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
                 <h2 class="section-title">About us</h2>
                 <div class="underline"></div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-mobile-screen"></i></p>
                         <p class="aboutus-card-title mb-1">mobile gaming</p>
                         <p class="aboutus-card-text">We are creating mobile games!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fas fa-desktop"></i></p>
                         <p class="aboutus-card-title mb-1">desktop gaming</p>
                         <p class="aboutus-card-text">We are creating PC games!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fas fa-file-code"></i></p>
                         <p class="aboutus-card-title mb-1">High standards</p>
                         <p class="aboutus-card-text">Our code is written with highest standards!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fas fa-paw"></i></p>
                         <p class="aboutus-card-title mb-1">We love animals!</p>
                         <p class="aboutus-card-text">Our games are created environmentally friendly🙂</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fas fa-hamburger"></i></p>
                         <p class="aboutus-card-title mb-1">We are loving good food</p>
                         <p class="aboutus-card-text">Food is important for us before duty.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fas fa-glass-cheers"></i></p>
                         <p class="aboutus-card-title mb-1">Great communication</p>
                         <p class="aboutus-card-text">Customers can feel our engagement</p>
