--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
                 </div>
             </div>
         </section>
+        <section class="aboutus-hero py-5">
+            <div class="container">
+                <h2 class="section-title">We are creating games</h2>
+                <div class="underline"></div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p class="aboutus-card-title mb-1">PC</p>
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <p class="aboutus-card-text">We are creating PC games!</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p class="aboutus-card-title mb-1">Consoles</p>
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <p class="aboutus-card-text">We are creating console games!</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p class="aboutus-card-title mb-1">Mobile</p>
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <p class="aboutus-card-text">We are creating mobile games!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aboutus-shadow"></div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
