New icons for about us hero section

--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p class="aboutus-card-title mb-1">PC</p>
-                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <p><i class="fa-brands fa-steam"></i></p>
                         <p class="aboutus-card-text">We are creating PC games!</p>
                     </div>
                     <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p class="aboutus-card-title mb-1">Consoles</p>
-                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <p><i class="fa-brands fa-playstation"></i></p>
                         <p class="aboutus-card-text">We are creating console games!</p>
                     </div>
                     <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p class="aboutus-card-title mb-1">Mobile</p>
-                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <p><i class="fa-brands fa-xbox"></i></p>
                         <p class="aboutus-card-text">We are creating mobile games!</p>
                     </div>
                 </div>
