Fronts for about us hero, new icons

--- a/index.html
+++ b/index.html
@@ -89,24 +89,24 @@
             </div>
         </section>
         <section class="aboutus-hero py-5">
-            <div class="container">
+            <div class="container py-5">
                 <h2 class="section-title">We are creating games</h2>
                 <div class="underline"></div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p class="aboutus-card-title mb-1">PC</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PC</p>
                         <p><i class="fa-brands fa-steam"></i></p>
-                        <p class="aboutus-card-text">We are creating PC games!</p>
+                        <p class="aboutus-hero-text">Play with friends on Your PC!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p class="aboutus-card-title mb-1">Consoles</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PlayStation</p>
                         <p><i class="fa-brands fa-playstation"></i></p>
-                        <p class="aboutus-card-text">We are creating console games!</p>
+                        <p class="aboutus-hero-text">Our games are also for Sony Playstation!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p class="aboutus-card-title mb-1">Mobile</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">Xbox</p>
                         <p><i class="fa-brands fa-xbox"></i></p>
-                        <p class="aboutus-card-text">We are creating mobile games!</p>
+                        <p class="aboutus-hero-text">We are also developing games for Xbox!</p>
                     </div>
                 </div>
             </div>
