--- a/index.html
+++ b/index.html
@@ -112,6 +112,47 @@
             </div>
             <div class="aboutus-shadow"></div>
         </section>
+        <section id="portfolio" class="portfolio bg-light pt-5">
+            <h2 class="section-title">Portfolio</h2>
+            <div class="underline"></div>
+            <div class="container">
+                <div id="carouselExampleCaptions" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./img/mercedes.jpg" class="d-block w-100"
+                                alt="White Mercedes Car on light background">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Racing-GT</h5>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/gaming.jpg" class="d-block w-100" alt="Two joypads">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Pro-x Football</h5>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, tempore?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
