Hiding Portfolio section on mobile

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="aboutus-shadow"></div>
         </section>
-        <section id="portfolio" class="portfolio bg-light pt-5">
+        <section id="portfolio" class="portfolio bg-light pt-5 d-none d-lg-block">
             <h2 class="section-title">Portfolio</h2>
             <div class="underline"></div>
             <div class="container">
