Cards instead of carousel on mobile

--- a/index.html
+++ b/index.html
@@ -112,11 +112,29 @@
             </div>
             <div class="aboutus-shadow"></div>
         </section>
-        <section id="portfolio" class="portfolio bg-light pt-5 d-none d-lg-block">
+        <section id="portfolio" class="portfolio bg-light pt-5">
             <h2 class="section-title">Portfolio</h2>
             <div class="underline"></div>
             <div class="container">
-                <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="card-group d-lg-none">
+                    <div class="card me-3">
+                        <img src="./img/mercedes.jpg" class="card-img-top" alt="White Mercedes Car on light background">
+                        <div class="card-body">
+                            <h5 class="card-title">Racing GT</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/gaming.jpg" class="card-img-top" alt="Two joypads">
+                        <div class="card-body">
+                            <h5 class="card-title">Pro-X Football</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="carouselExampleCaptions" class="carousel slide d-none d-lg-block">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
