Prices section, new background colors, logo fix

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fa-sharp fa-solid fa-headset"></i>Pro<span
+            <a class="navbar-brand" href="#"><i class="fa-sharp fa-solid fa-headset"></i> Pro<span
                     class="blue-text">gamers</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -112,7 +112,7 @@
             </div>
             <div class="aboutus-shadow"></div>
         </section>
-        <section id="portfolio" class="portfolio bg-light pt-5">
+        <section id="portfolio" class="portfolio py-5">
             <h2 class="section-title">Portfolio</h2>
             <div class="underline"></div>
             <div class="container">
@@ -169,6 +169,57 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+            </div>
+        </section>
+        <section id="prices" class="prices py-5 bg-light">
+            <h2 class="section-title">Prices</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+                <div class="price-wrap row text-center justify-content-center">
+                    <div class="col-md-6 col-xl-4">
+                        <div class="price-box">
+                            <p class="price-title">mobile</p>
+                            <hr>
+                            <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p class="price-tag">499euro</p>
+                            <button class="btn btn-secondary">Order</button>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="price-box">
+                            <p class="price-title">mobile</p>
+                            <hr>
+                            <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p class="price-tag">499euro</p>
+                            <button class="btn btn-secondary">Order</button>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="price-box">
+                            <p class="price-title">mobile</p>
+                            <hr>
+                            <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p><span>Title: </span>Lorem.</p>
+                            <p class="price-tag">499euro</p>
+                            <button class="btn btn-secondary">Order</button>
+                        </div>
+                    </div>
+                </div>
+                <p class="price-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, excepturi doloribus
+                    iusto accusamus sequi impedit <a href="#contact">contact us</a> repellat aspernatur itaque tempore
+                    natus ut
+                    at quidem laborum pariatur
+                </p>
+                <p class="text-muted">Lorem ipsum dolor <strong>FULL PACK</strong> sit amet consectetur.</p>
             </div>
         </section>
     </main>
