Styles for prices section

--- a/index.html
+++ b/index.html
@@ -179,47 +179,48 @@
                 <div class="price-wrap row text-center justify-content-center">
                     <div class="col-md-6 col-xl-4">
                         <div class="price-box">
-                            <p class="price-title">mobile</p>
+                            <p class="price-title">Mobile</p>
                             <hr>
                             <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
-                            <p class="price-tag">499euro</p>
+                            <p class="price-tag">499 Euro</p>
                             <button class="btn btn-secondary">Order</button>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="price-box">
-                            <p class="price-title">mobile</p>
+                            <p class="price-title">Mobile and PC</p>
                             <hr>
                             <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
-                            <p class="price-tag">499euro</p>
-                            <button class="btn btn-secondary">Order</button>
+                            <p class="price-tag">499 Euro</p>
+                            <button class="btn btn-primary">Order</button>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="price-box">
-                            <p class="price-title">mobile</p>
+                            <p class="price-title">Full pack</p>
                             <hr>
                             <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
-                            <p class="price-tag">499euro</p>
+                            <p class="price-tag">499 Euro</p>
                             <button class="btn btn-secondary">Order</button>
                         </div>
                     </div>
                 </div>
-                <p class="price-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, excepturi doloribus
+                <p class="price-info text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+                    excepturi doloribus
                     iusto accusamus sequi impedit <a href="#contact">contact us</a> repellat aspernatur itaque tempore
                     natus ut
                     at quidem laborum pariatur
                 </p>
-                <p class="text-muted">Lorem ipsum dolor <strong>FULL PACK</strong> sit amet consectetur.</p>
+                <p class="text-muted text-center">Lorem ipsum dolor <strong>FULL PACK</strong> sit amet consectetur.</p>
             </div>
         </section>
     </main>
