New team section

--- a/index.html
+++ b/index.html
@@ -175,7 +175,6 @@
         <section id="prices" class="prices py-5 bg-light">
             <h2 class="section-title">Prices</h2>
             <div class="underline"></div>
-
             <div class="container">
                 <div class="price-wrap row text-center justify-content-center">
                     <div class="col-md-6 col-xl-4">
@@ -222,6 +221,80 @@
                     at quidem laborum pariatur
                 </p>
                 <p class="text-muted text-center">Lorem ipsum dolor <strong>FULL PACK</strong> sit amet consectetur.</p>
+            </div>
+        </section>
+        <section id="team" class="team py-5">
+            <h2 class="section-title">Team</h2>
+            <div class="underline"></div>
+            <div class="container">
+                <div class="card-group">
+                    <div class="card mx-3">
+                        <img src="./img/team/team-1.jpg" class="card-img-top" alt="Worker of progamers">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <img src="./img/team/team-2.jpg" class="card-img-top" alt="Worker of progamers">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <img src="./img/team/team-3.jpg" class="card-img-top" alt="Worker of progamers">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <img src="./img/team/team-4.jpg" class="card-img-top" alt="Worker of progamers">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <img src="./img/team/team-5.jpg" class="card-img-top" alt="Worker of progamers">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
