--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
                     </div>
                 </div>
             </div>
+            <div class="team-shadow"></div>
         </section>
     </main>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
