--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <h2 class="section-title">Team</h2>
             <div class="underline"></div>
             <div class="container">
-                <div class="card-group">
+                <div class="card-group team-carousel">
                     <div class="card mx-3">
                         <img src="./img/team/team-1.jpg" class="card-img-top" alt="Worker of progamers">
                         <div class="card-body">
@@ -302,8 +302,10 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://releases.jquery.com/git/jquery-git.slim.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/slick.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
