--- a/index.html
+++ b/index.html
@@ -298,6 +298,44 @@
             </div>
             <div class="team-shadow"></div>
         </section>
+        <section id="achievements" class="achievements py-5">
+            <h2 class="section-title">Achievements</h2>
+            <div class="underline"></div>
+            <div class="container">
+                <div class="row text-center achievements-list">
+                    <div class="col-md-6 col-lg-4 col-xl-2">
+                        <i class="fas fa-thumbs-up"></i>
+                        <p class="achievement-number">100%</p>
+                        <p class="achievement-text">Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2">
+                        <i class="fas fa-trophy"></i>
+                        <p class="achievement-number">37</p>
+                        <p class="achievement-text">Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2">
+                        <i class="fas fa-user-friends"></i>
+                        <p class="achievement-number">143</p>
+                        <p class="achievement-text">Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2">
+                        <i class="fas fa-building"></i>
+                        <p class="achievement-number">7</p>
+                        <p class="achievement-text">Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2">
+                        <i class="fas fa-dice"></i>
+                        <p class="achievement-number">58</p>
+                        <p class="achievement-text">Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2">
+                        <i class="fas fa-share-alt"></i>
+                        <p class="achievement-number">80.000</p>
+                        <p class="achievement-text">Lorem, ipsum dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
