--- a/index.html
+++ b/index.html
@@ -336,6 +336,36 @@
                 </div>
             </div>
         </section>
+        <section id="contact" class="contact py-5 bg-light">
+            <h2 class="section-title">Contact</h2>
+            <div class="underline"></div>
+            <div class="container">
+                <div class="row text-center contact-us">
+                    <div class="col-sm-6 col-lg-4 contact-item order-1">
+                        <h3>Lorem title</h3>
+                        <p>Lorem, ipsum dolor.</p>
+                        <p>Lorem, ipsum dolor.</p>
+                        <p>Lorem, ipsum dolor.</p>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 order-0 order-lg-1">
+                        <h3>Social media</h3>
+                        <div class="social-media">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 contact-item order-1">
+                        <h3>Lorem title</h3>
+                        <p>Lorem, ipsum dolor.</p>
+                        <p>Lorem, ipsum dolor.</p>
+                        <p>Lorem, ipsum dolor.</p>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
