--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <p>Lorem, ipsum dolor.</p>
                         <p>Lorem, ipsum dolor.</p>
                     </div>
-                    <div class="col-sm-6 col-lg-4 order-0 order-lg-1">
+                    <div class="col-sm-6 col-lg-4 order-0 order-lg-1 contact-item">
                         <h3>Social media</h3>
                         <div class="social-media">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -365,6 +365,7 @@
                     </div>
                 </div>
             </div>
+            <div class="contact-shadow"></div>
         </section>
     </main>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
