New footer section

--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
             <div class="contact-shadow"></div>
         </section>
     </main>
+    <footer class="bg-dark text-light py-4 text-center">
+        <p class="mb-0">&copy; 2045 | ProGamers</p>
+    </footer>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
