--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="hero-shadow"></div>
         <a href="#aboutus">
-            <i class="fa-solid fa-chevron-down"></i>
+            <i class="fa-solid fa-chevron-down bounce-top"></i>
         </a>
     </header>
     <main>
