Configured AOS animations

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     </nav>
     <header class="hero-img" id="home">
         <div class="hero-text text-center p-2">
-            <h1>Welcome in Pro<span class="blue-text">gamers</span></h1>
-            <p>Place, where games are created with passion</p>
-            <a href="#aboutus" class="btn btn-outline-light mt-2 text-uppercase">More about us</a>
+            <h1 data-aos="fade-up" data-aos-delay="200">Welcome in Pro<span class="blue-text">gamers</span></h1>
+            <p data-aos="fade-up" data-aos-delay="400">Place, where games are created with passion</p>
+            <a data-aos="fade-up" data-aos-delay="600" href="#aboutus"
+                class="btn btn-outline-light mt-2 text-uppercase">More about us</a>
         </div>
         <div class="hero-shadow"></div>
         <a href="#aboutus">
@@ -57,32 +58,32 @@
                 <h2 class="section-title">About us</h2>
                 <div class="underline"></div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="100">
                         <p><i class="fa-solid fa-mobile-screen"></i></p>
                         <p class="aboutus-card-title mb-1">mobile gaming</p>
                         <p class="aboutus-card-text">We are creating mobile games!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="150">
                         <p><i class="fas fa-desktop"></i></p>
                         <p class="aboutus-card-title mb-1">desktop gaming</p>
                         <p class="aboutus-card-text">We are creating PC games!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="200">
                         <p><i class="fas fa-file-code"></i></p>
                         <p class="aboutus-card-title mb-1">High standards</p>
                         <p class="aboutus-card-text">Our code is written with highest standards!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="250">
                         <p><i class="fas fa-paw"></i></p>
                         <p class="aboutus-card-title mb-1">We love animals!</p>
                         <p class="aboutus-card-text">Our games are created environmentally friendly🙂</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="300">
                         <p><i class="fas fa-hamburger"></i></p>
                         <p class="aboutus-card-title mb-1">We are loving good food</p>
                         <p class="aboutus-card-text">Food is important for us before duty.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="350">
                         <p><i class="fas fa-glass-cheers"></i></p>
                         <p class="aboutus-card-title mb-1">Great communication</p>
                         <p class="aboutus-card-text">Customers can feel our engagement</p>
@@ -304,32 +305,32 @@
             <div class="underline"></div>
             <div class="container">
                 <div class="row text-center achievements-list">
-                    <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="col-md-6 col-lg-4 col-xl-2" data-aos="zoom-in" data-aos-delay="100">
                         <i class="fas fa-thumbs-up"></i>
                         <p class="achievement-number">100%</p>
                         <p class="achievement-text">Lorem, ipsum dolor.</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="col-md-6 col-lg-4 col-xl-2" data-aos="zoom-in" data-aos-delay="50">
                         <i class="fas fa-trophy"></i>
                         <p class="achievement-number">37</p>
                         <p class="achievement-text">Lorem, ipsum dolor.</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="col-md-6 col-lg-4 col-xl-2" data-aos="zoom-in" data-aos-delay="200">
                         <i class="fas fa-user-friends"></i>
                         <p class="achievement-number">143</p>
                         <p class="achievement-text">Lorem, ipsum dolor.</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="col-md-6 col-lg-4 col-xl-2" data-aos="zoom-in" data-aos-delay="300">
                         <i class="fas fa-building"></i>
                         <p class="achievement-number">7</p>
                         <p class="achievement-text">Lorem, ipsum dolor.</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="col-md-6 col-lg-4 col-xl-2" data-aos="zoom-in" data-aos-delay="250">
                         <i class="fas fa-dice"></i>
                         <p class="achievement-number">58</p>
                         <p class="achievement-text">Lorem, ipsum dolor.</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="col-md-6 col-lg-4 col-xl-2" data-aos="zoom-in" data-aos-delay="350">
                         <i class="fas fa-share-alt"></i>
                         <p class="achievement-number">80.000</p>
                         <p class="achievement-text">Lorem, ipsum dolor.</p>
@@ -380,7 +381,12 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init({
+            startEvent: 'DOMContentLoaded',
+            offset: 200,
+            once: true,
+
+        });
     </script>
     <script src="./js/slick.js"></script>
     <script src="./js/script.js"></script>
