Main AOS configuration moved to js file

--- a/index.html
+++ b/index.html
@@ -380,15 +380,8 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            startEvent: 'DOMContentLoaded',
-            offset: 200,
-            once: true,
-
-        });
-    </script>
     <script src="./js/slick.js"></script>
+    <script src="./js/aos.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
