More icons for Prices section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,11 @@
                         <div class="price-box">
                             <p class="price-title">Mobile and PC</p>
                             <hr>
-                            <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
+                            <p>
+                                <span>Devies </span>
+                                <i class="fas fa-mobile-alt"></i>
+                                <i class="fas fa-desktop"></i>
+                            </p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
@@ -207,7 +211,12 @@
                         <div class="price-box">
                             <p class="price-title">Full pack</p>
                             <hr>
-                            <p><span>Devies </span><i class="fas fa-mobile-alt"></i></p>
+                            <p>
+                                <span>Devies </span>
+                                <i class="fas fa-mobile-alt"></i>
+                                <i class="fas fa-desktop"></i>
+                                <i class="fas fa-gamepad"></i>
+                            </p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
                             <p><span>Title: </span>Lorem.</p>
