Fix for highlighting clicked menu option

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link" href="#">Home</a>
                     <a class="nav-link" href="#aboutus">About us</a>
                     <a class="nav-link" href="#portfolio">Portfolio</a>
                     <a class="nav-link" href="#prices">Prices</a>
